--- a/src/i18n/locales/th.json
+++ b/src/i18n/locales/th.json
@@ -4,16 +4,61 @@
     "showroom": "โชว์รูม",
     "collections": "คอลเลคชั่น",
     "map": "แผนที่",
-    "history": "ประวัติ",
+    "history": "ประวัติศาสตร์",
     "wishlist": "รายการโปรด",
     "compare": "เปรียบเทียบ",
-    "bookNow": "จองเลย"
+    "bookNow": "จองทดลองขับ"
   },
   "landing": {
-    "title": "โชว์รูมบิ๊กไบค์",
-    "subtitle": "สัมผัสประสบการณ์รถจักรยานยนต์สุดพรีเมียม",
+    "title": "โชว์รูมบิ๊กไบค์แห่งอนาคต",
+    "subtitle": "สัมผัสประสบการณ์รถจักรยานยนต์ระดับพรีเมียมในรูปแบบ 3 มิติ",
     "enterShowroom": "เข้าสู่โชว์รูม",
     "viewCollections": "ดูคอลเลคชั่น"
+  },
+  "showroom": {
+    "title": "เลือกมอเตอร์ไซค์ของคุณ",
+    "filterTitle": "ตัวกรอง",
+    "sortBy": "เรียงตาม",
+    "sort": {
+      "priceAsc": "ราคา: น้อยไปมาก",
+      "priceDesc": "ราคา: มากไปน้อย",
+      "hpDesc": "แรงม้า: สูงไปต่ำ"
+    },
+    "noResults": "ไม่พบมอเตอร์ไซค์ที่ตรงกับเงื่อนไข"
+  },
+  "collections": {
+    "title": "คอลเลคชั่นสุดพิเศษ",
+    "byBrand": "เลือกตามแบรนด์",
+    "byCategory": "เลือกตามประเภท",
+    "sport": "สปอร์ตไบค์",
+    "adventure": "แอดเวนเจอร์",
+    "cruiser": "ครุยเซอร์",
+    "naked": "เน็คเก็ตไบค์"
+  },
+  "map": {
+    "title": "ค้นหาโชว์รูมของเรา",
+    "findUs": "พบกับเราได้ที่",
+    "ourLocation": "ที่ตั้งของเรา",
+    "getDirections": "นำทาง"
+  },
+  "history": {
+    "title": "ประวัติศาสตร์แห่งสองล้อ",
+    "era": {
+      "classic": "ยุคคลาสสิก",
+      "modern": "ยุคโมเดิร์น",
+      "future": "ยุคอนาคต"
+    }
+  },
+  "wishlist": {
+    "title": "รายการโปรดของคุณ",
+    "empty": "รายการโปรดยังว่างอยู่",
+    "emptyAction": "ไปเลือกคันที่ชอบกันเลย!"
+  },
+  "compare": {
+    "title": "เปรียบเทียบมอเตอร์ไซค์",
+    "addPrompt": "เพิ่มมอเตอร์ไซค์ 2-3 คันเพื่อเริ่มเปรียบเทียบ",
+    "addMore": "เพิ่มคันอื่นเพื่อเปรียบเทียบ",
+    "clearAll": "ล้างทั้งหมด"
   },
   "specs": {
     "cc": "ซีซี",
@@ -26,57 +71,83 @@
     "weightDesc": "น้ำหนักทั้งหมดของมอเตอร์ไซค์",
     "topSpeed": "ความเร็วสูงสุด",
     "topSpeedDesc": "ความเร็วสูงสุดที่สามารถบรรลุได้",
-    "acceleration": "0-100",
+    "acceleration": "0-100 กม./ชม.",
     "accelerationDesc": "เวลาในการเร่ง 0 ถึง 100 กม./ชม.",
     "price": "ราคา"
   },
   "actions": {
-    "details": "รายละเอียด",
-    "addToWishlist": "เพิ่มไปยังรายการโปรด",
-    "removeFromWishlist": "ลบออกจากรายการโปรด",
-    "compareNow": "เปรียบเทียบทันที",
+    "details": "ดูรายละเอียด",
+    "addToWishlist": "เพิ่มในรายการโปรด",
+    "removeFromWishlist": "ลบจากรายการโปรด",
+    "compareNow": "เปรียบเทียบ",
     "viewIn3D": "ดูแบบ 3D",
-    "viewInAR": "ดูใน AR",
+    "viewInAR": "ดูใน AR (เร็วๆ นี้)",
     "share": "แชร์",
     "book": "จอง"
   },
   "booking": {
     "title": "จองการทดลองขับ",
-    "name": "ชื่อ",
-    "phone": "โทรศัพท์",
-    "type": "ประเภท",
+    "name": "ชื่อ-นามสกุล",
+    "phone": "เบอร์โทรศัพท์",
+    "type": "ประเภทการจอง",
     "testRide": "ทดลองขับ",
     "rental": "เช่า",
-    "purchase": "ซื้อ",
-    "date": "วันที่",
-    "time": "เวลา",
-    "submit": "ส่ง",
-    "success": "จองสำเร็จ!"
+    "purchase": "สั่งซื้อ",
+    "date": "เลือกวันที่",
+    "time": "เลือกเวลา",
+    "submit": "ยืนยันการจอง",
+    "success": "การจองของคุณสำเร็จแล้ว!"
   },
   "gamification": {
-    "viewed": "คุณดู {count}/{total} คัน",
+    "progress": "ความคืบหน้า",
+    "achievements": "ความสำเร็จ",
+    "unlocked": "ปลดล็อกความสำเร็จ!",
+    "viewed": "ดูแล้ว {count} จาก {total} คัน",
     "badge": "เหรียญตรา: {name}",
-    "yamahaFan": "แฟนยามาฮ่า",
-    "kawasakiFan": "แฟนคาวาซากิ",
-    "ducatiFan": "แฟนดูคาติ",
-    "hondaFan": "แฟนฮอนด้า",
-    "bmwFan": "แฟน BMW"
+    "yamahaFan": "แฟนพันธุ์แท้ยามาฮ่า",
+    "kawasakiFan": "แฟนพันธุ์แท้คาวาซากิ",
+    "ducatiFan": "แฟนพันธุ์แท้ดูคาติ",
+    "hondaFan": "แฟนพันธุ์แท้ฮอนด้า",
+    "bmwFan": "แฟนพันธุ์แท้ BMW"
+  },
+  "achievements": {
+    "firstLook": {
+      "name": "การค้นพบครั้งแรก",
+      "desc": "ดูมอเตอร์ไซค์คันแรกของคุณ"
+    },
+    "enthusiast": {
+      "name": "ผู้ที่ชื่นชอบ",
+      "desc": "ดูมอเตอร์ไซค์ครบ 10 คัน"
+    },
+    "collector": {
+      "name": "นักสะสม",
+      "desc": "ดูมอเตอร์ไซค์เกินครึ่งของทั้งหมด"
+    },
+    "masterExplorer": {
+      "name": "นักสำรวจระดับปรมาจารย์",
+      "desc": "ดูมอเตอร์ไซค์ครบทุกคัน!"
+    },
+    "brandFan": {
+      "name": "แฟนพันธุ์แท้ {brand}",
+      "desc": "ดูมอเตอร์ไซค์ครบทุกคันของ {brand}"
+    }
   },
   "onboarding": {
     "welcome": "ยินดีต้อนรับสู่โชว์รูมบิ๊กไบค์!",
-    "tip1": "ลากเพื่อหมุนโมเดล 3D",
-    "tip2": "เลื่อนเพื่อสลับรถ",
-    "tip3": "ใช้ลูกศรเพื่อนำทาง",
-    "gotIt": "เข้าใจแล้ว"
+    "tip1": "ใช้เมาส์ลากเพื่อหมุนโมเดล 3D",
+    "tip2": "ใช้ Scroll Wheel เพื่อซูมเข้า-ออก",
+    "tip3": "กดที่ลูกศรเพื่อเลือกรถคันถัดไป",
+    "gotIt": "รับทราบ"
   },
   "loading": {
-    "polishing": "กำลังจัด...",
-    "preparing": "กำลังเตรียม...",
-    "loading": "กำลังโหลด..."
+    "polishing": "กำลังขัดเงาโครเมียม...",
+    "preparing": "กำลังเตรียมเครื่องยนต์...",
+    "loading": "กำลังโหลดโมเดล 3D...",
+    "complete": "ระบบพร้อมใช้งาน"
   },
   "chat": {
-    "title": "ผู้ช่วย AI",
-    "placeholder": "ถามเกี่ยวกับรถ...",
+    "title": "AI BIKE EXPERT",
+    "placeholder": "ถามได้ทุกเรื่องเกี่ยวกับบิ๊กไบค์...",
     "send": "ส่ง"
   },
   "theme": {
@@ -84,7 +155,14 @@
     "dark": "โหมดมืด"
   },
   "modes": {
-    "lite": "โหมดเบา",
-    "full": "โหมดเต็ม"
+    "lite": "โหมด Lite",
+    "full": "โหมด Full"
+  },
+  "footer": {
+    "aboutUs": "เกี่ยวกับเรา",
+    "contact": "ติดต่อ",
+    "privacyPolicy": "นโยบายความเป็นส่วนตัว",
+    "socialMedia": "โซเชียลมีเดีย",
+    "copyright": "© {year} BigBike Showroom สงวนลิขสิทธิ์"
   }
 }
